The slides are really making headway Next up... Book CPT

--- a/wcott2014_demos/less/wcottawa.less
+++ b/wcott2014_demos/less/wcottawa.less
@@ -92,6 +92,12 @@ ______________________________________________*/
 
 .reveal {
     font-family: 'Lato', sans-serif;
+
+    section {
+        img {
+            max-height: 700px;
+        }
+    }
 }
 
 /*********************************************
