--- a/wcott2014_demos/css/wcottawa.css
+++ b/wcott2014_demos/css/wcottawa.css
@@ -1,1 +1,355 @@
-html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:0 0}body{line-height:1}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}nav ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}a{margin:0;padding:0;font-size:100%;vertical-align:baseline;background:0 0}ins{background-color:#ff9;color:#000;text-decoration:none}mark{background-color:#ff9;color:#000;font-style:italic;font-weight:700}del{text-decoration:line-through}abbr[title],dfn[title]{border-bottom:1px dotted;cursor:help}table{border-collapse:collapse;border-spacing:0}hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}input,select{vertical-align:middle}.clearfix:after,.split:after{visibility:hidden;display:block;font-size:0;content:" ";clear:both;height:0}* html .clearfix,* html .split{zoom:1}:first-child+html .clearfix,:first-child+html .split{zoom:1}*,:before,:after{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box}@font-face{font-family:clear_sansregular;src:url(clear_sans/clearsans_regular_macroman/ClearSans-Regular-webfont.eot);src:url(clear_sans/clearsans_regular_macroman/ClearSans-Regular-webfont.eot?#iefix) format('embedded-opentype'),url(clear_sans/clearsans_regular_macroman/ClearSans-Regular-webfont.woff) format('woff'),url(clear_sans/clearsans_regular_macroman/ClearSans-Regular-webfont.ttf) format('truetype'),url(clear_sans/clearsans_regular_macroman/ClearSans-Regular-webfont.svg#clear_sansregular) format('svg');font-weight:400;font-style:normal}.align-left{float:left}.align-right{float:right}body{background:radial-gradient(circle farthest-corner at center center,#555a5f 0,#1c1e20 100%) repeat scroll 0 0 #2b2b2b;font-family:clear_sansregular,sans-serif;text-align:center}a{-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;color:#ff0;padding:5px;text-decoration:none}a:hover,a.active{background:#ff0;color:#666}.split .half{float:left;width:50%}.reveal{font-family:Lato,sans-serif}.reveal h1,.reveal h2,.reveal h3,.reveal h4,.reveal h5,.reveal h6{font-family:"League Gothic",Impact,sans-serif}#mondrian .content{float:left;max-width:50%}#mondrian #masonry-container{float:right;margin:50px auto;width:300px}#mondrian #masonry-container .box{background:#ff0;border:2px solid #666;color:transparent;text-align:center;-webkit-transition:all 500ms ease-in-out;-moz-transition:all 500ms ease-in-out;-o-transition:all 500ms ease-in-out;transition:all 500ms ease-in-out}#mondrian #masonry-container .box.w1{width:30px}#mondrian #masonry-container .box.w2{width:60px}#mondrian #masonry-container .box.w3{width:90px}#mondrian #masonry-container .box.w4{width:120px}#mondrian #masonry-container .box.h1{height:30px}#mondrian #masonry-container .box.h2{height:60px}#mondrian #masonry-container .box.h3{height:90px}#mondrian #masonry-container .box.h4{height:120px}#mondrian #masonry-container .box.h5{height:150px}#mondrian #masonry-container .box.h1.no-size,#mondrian #masonry-container .box.h2.no-size,#mondrian #masonry-container .box.h3.no-size,#mondrian #masonry-container .box.h4.no-size,#mondrian #masonry-container .box.h5.no-size{height:30px}#mondrian #masonry-container .box.floated{float:left}#mondrian #masonry-container .box.colour{border:2px solid #000;background:#fff}#mondrian #masonry-container .box.colour.yellow{background:#ffff01}#mondrian #masonry-container .box.colour.red{background:#fe0000}#mondrian #masonry-container .box.colour.blue{background:#0000fe}
+/*
+
+       oy:                                                            :yo
+       sNNNs:                                                      :sNNNs
+       sNNNNNms:                                                :smNNNNNs
+       sNNNNNNNNms-                                          -smNNNNNNNNs
+       sNNNNNNNNNNNmo-                                    -omNNNNNNNNNNNs
+       sNNNNNNNNNNNNNNdo.                              .odNNNNNNNNNNNNNNs
+       sNNNNNNNNNNNNNNNNNd+.                        .+dNNNNNNNNNNNNNNNNNs
+       sNNNNNNNNNNNNNNNNNNNNd+.                  .+dNNNNNNNNNNNNNNNNNNNNs
+       sNNNNNNNNNNNNNNNNNNNNNNNh+`            `+hNNNNNNNNNNNNNNNNNNNNNNNs
+       sNNNNNNNNNNNNNNNNNNNNNNNNNNh/`      `/hNNNNNNNNNNNNNNNNNNNNNNNNNNs
+       sNNNNNNNNNNNNNNNNNNNNNNNNNNNNNy/``/yNNNNNNNNNNNNNNNNNNNNNNNNNNNNNs
+       sNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNs
+       sNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNs
+       sNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNs
+       sNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNs
+       sNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNs
+       sNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNs
+       +NNNNNN-...................yNNNNNNNNNNy...................-NNNNNN+
+       -NNNNNN+                   mNNNNNNNNNNm`                  +NNNNNN-
+        hNNNNNN:                 yNNNNNNNNNNNNy                 :NNNNNNh
+        `mNNNNNNs`             :dNNNNNNmmNNNNNNd:             `oNNNNNNm`
+         `hNNNNNNNy/`       -+dNNNNNNNd`.dNNNNNNNd+-       `/yNNNNNNNh`
+           +mNNNNNNNNNdhhddNNNNNNNNNN+    +NNNNNNNNNNmdhhdNNNNNNNNNm+
+            `+dNNNNNNNNNNNNNNNNNNNd+`      `+dNNNNNNNNNNNNNNNNNNNd+`
+               .+ymNNNNNNNNNNNmh+.            .+hmNNNNNNNNNNNmy+.
+                   `-:/+++/:-`                    `-:/+++/:-`
+
+            WordCamp Ottawa : Down with Sliders! Show them everything!
+            Author: Michal Bluma (clients@isotrope.net)
+
+*/
+/*---------------------------------------------------
+    LESS Elements 0.9
+  ---------------------------------------------------
+    A set of useful LESS mixins
+    More info at: http://lesselements.com
+  ---------------------------------------------------*/
+/* 
+html5doctor.com Reset Stylesheet
+v1.6.1
+Last Updated: 2010-09-17
+Author: Richard Clark - http://richclarkdesign.com 
+Twitter: @rich_clark
+*/
+html,
+body,
+div,
+span,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+abbr,
+address,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+samp,
+small,
+strong,
+sub,
+sup,
+var,
+b,
+i,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+}
+body {
+  line-height: 1;
+}
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+nav ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+a {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+}
+/* change colours to suit your needs */
+ins {
+  background-color: #ff9;
+  color: #000;
+  text-decoration: none;
+}
+/* change colours to suit your needs */
+mark {
+  background-color: #ff9;
+  color: #000;
+  font-style: italic;
+  font-weight: bold;
+}
+del {
+  text-decoration: line-through;
+}
+abbr[title],
+dfn[title] {
+  border-bottom: 1px dotted;
+  cursor: help;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+/* change border colour to suit your needs */
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #cccccc;
+  margin: 1em 0;
+  padding: 0;
+}
+input,
+select {
+  vertical-align: middle;
+}
+/* Clearfix
+http://css-tricks.com/snippets/css/clear-fix/ */
+.clearfix:after,
+.split:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0;
+}
+* html .clearfix,
+* html .split {
+  zoom: 1;
+}
+/* IE6 */
+*:first-child + html .clearfix,
+*:first-child + html .split {
+  zoom: 1;
+}
+/* IE7 */
+/* apply a natural box layout model to all elements
+http://www.paulirish.com/2012/box-sizing-border-box-ftw/ */
+*,
+*:before,
+*:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+@font-face {
+  font-family: 'clear_sansregular';
+  src: url('clear_sans/clearsans_regular_macroman/ClearSans-Regular-webfont.eot');
+  src: url('clear_sans/clearsans_regular_macroman/ClearSans-Regular-webfont.eot?#iefix') format('embedded-opentype'), url('clear_sans/clearsans_regular_macroman/ClearSans-Regular-webfont.woff') format('woff'), url('clear_sans/clearsans_regular_macroman/ClearSans-Regular-webfont.ttf') format('truetype'), url('clear_sans/clearsans_regular_macroman/ClearSans-Regular-webfont.svg#clear_sansregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+/* Vars
+______________________________________________________________________________*/
+/* Utils
+______________________________________________________________________________*/
+.align-left {
+  float: left;
+}
+.align-right {
+  float: right;
+}
+body {
+  background: radial-gradient(circle farthest-corner at center center, #555a5f 0%, #1c1e20 100%) repeat scroll 0 0 #2b2b2b;
+  font-family: 'clear_sansregular', sans-serif;
+  text-align: center;
+}
+a {
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  color: #ffff00;
+  padding: 5px;
+  text-decoration: none;
+}
+a:hover,
+a.active {
+  background: #ffff00;
+  color: #666;
+}
+.split .half {
+  float: left;
+  width: 50%;
+}
+/* reveal.js overrides
+______________________________________________*/
+.reveal {
+  font-family: 'Lato', sans-serif;
+}
+.reveal section img {
+  max-height: 700px;
+}
+/*********************************************
+ * HEADERS
+ *********************************************/
+.reveal h1,
+.reveal h2,
+.reveal h3,
+.reveal h4,
+.reveal h5,
+.reveal h6 {
+  font-family: "League Gothic", Impact, sans-serif;
+}
+#mondrian .content {
+  float: left;
+  max-width: 50%;
+}
+#mondrian #masonry-container {
+  float: right;
+  margin: 50px auto;
+  width: 300px;
+}
+#mondrian #masonry-container .box {
+  background: #ffff00;
+  border: 2px solid #666666;
+  color: transparent;
+  text-align: center;
+  -webkit-transition: all 500ms ease-in-out;
+  -moz-transition: all 500ms ease-in-out;
+  -o-transition: all 500ms ease-in-out;
+  transition: all 500ms ease-in-out;
+}
+#mondrian #masonry-container .box.w1 {
+  width: 30px;
+}
+#mondrian #masonry-container .box.w2 {
+  width: 60px;
+}
+#mondrian #masonry-container .box.w3 {
+  width: 90px;
+}
+#mondrian #masonry-container .box.w4 {
+  width: 120px;
+}
+#mondrian #masonry-container .box.h1 {
+  height: 30px;
+}
+#mondrian #masonry-container .box.h2 {
+  height: 60px;
+}
+#mondrian #masonry-container .box.h3 {
+  height: 90px;
+}
+#mondrian #masonry-container .box.h4 {
+  height: 120px;
+}
+#mondrian #masonry-container .box.h5 {
+  height: 150px;
+}
+#mondrian #masonry-container .box.h1.no-size,
+#mondrian #masonry-container .box.h2.no-size,
+#mondrian #masonry-container .box.h3.no-size,
+#mondrian #masonry-container .box.h4.no-size,
+#mondrian #masonry-container .box.h5.no-size {
+  height: 30px;
+}
+#mondrian #masonry-container .box.floated {
+  float: left;
+}
+#mondrian #masonry-container .box.colour {
+  border: 2px solid black;
+  background: white;
+}
+#mondrian #masonry-container .box.colour.yellow {
+  background: #ffff01;
+}
+#mondrian #masonry-container .box.colour.red {
+  background: #fe0000;
+}
+#mondrian #masonry-container .box.colour.blue {
+  background: #0000fe;
+}
