--- a/theme/wcott2014/less/style.less
+++ b/theme/wcott2014/less/style.less
@@ -24,4 +24,7 @@ and Blueprint http://www.blueprintcss.org/
 
 @import "elements/elements.less";
 @import "wordpress.less";
+
+@import "books.less";
+
 @import "custom.less";
