--- a/wcott2014_demos/less/wcottawa.less
+++ b/wcott2014_demos/less/wcottawa.less
@@ -115,11 +115,10 @@ ______________________________________________*/
 
 
 #mondrian {
-    @box_unit: 30px;
+    @box_unit: 60px;
 
-    .content {
-        float: left;
-        max-width: 50%;
+    .split .half:first-child {
+        width: 300px;
     }
 
     #masonry-container {
@@ -212,3 +211,34 @@ ______________________________________________*/
         } //.box
     } //#masonry-container
 } //#mondrian
+
+#mondrian_pic {
+    position: absolute;
+    bottom: 0;
+    left: 35%;
+        z-index: 9999;
+}
+
+
+.book-loop-results-1 {
+    height: 600px;
+    overflow: auto;
+
+    .book {
+        border-bottom: 1px solid yellow;
+        margin-bottom: 50px;
+        padding-bottom: 20px;
+
+        .book-title {
+            font-size: 30px;
+        }
+
+        .book-author {
+            font-size: 18px;
+        }
+
+        .book-publisher {
+            font-size: 14px;
+        }
+    }
+}
