--- a/theme/wcott2014/less/custom.less
+++ b/theme/wcott2014/less/custom.less
@@ -129,15 +129,37 @@ a:hover {
     text-align: center;
 }
 
+
+#main {
+    background: gray;
+}
+
 .inner {
     margin: 0 auto;
     max-width: 100%;
     width: 1440px;
 }
 
+.page-template-default {
+
+    .main-navigation {
+        margin-bottom: 15px;
+    }
+
+    .hentry {
+    color: yellow;
+    }
+}
+
 .page-main-content {
     background: yellow;
     padding: 20px;
+}
+
+#colophon {
+    background: yellow;
+    padding: 15px;
+    text-align: center;
 }
 
 .demo-step-togglers {
@@ -174,6 +196,8 @@ a:hover {
 .bg-gray {
     background: gray;
 }
+
+
 
 .section-ten-latest-posts {
 
