--- a/theme/wcott2014/style.css
+++ b/theme/wcott2014/style.css
@@ -1216,14 +1216,28 @@ a:hover {
   padding: 20px;
   text-align: center;
 }
+#main {
+  background: gray;
+}
 .inner {
   margin: 0 auto;
   max-width: 100%;
   width: 1440px;
 }
+.page-template-default .main-navigation {
+  margin-bottom: 15px;
+}
+.page-template-default .hentry {
+  color: yellow;
+}
 .page-main-content {
   background: yellow;
   padding: 20px;
+}
+#colophon {
+  background: yellow;
+  padding: 15px;
+  text-align: center;
 }
 .demo-step-togglers {
   text-align: center;
