--- a/wcott2014_demos/css/wcottawa.css
+++ b/wcott2014_demos/css/wcottawa.css
@@ -365,7 +365,8 @@ ______________________________________________*/
 #mondrian_pic {
   position: absolute;
   bottom: 0;
-  left: 35%;
+  left: 15%;
+  max-width: 80%;
   z-index: 9999;
 }
 .book-loop-results-1 {
