--- a/wcott2014_demos/less/wcottawa.less
+++ b/wcott2014_demos/less/wcottawa.less
@@ -224,7 +224,8 @@ ______________________________________________*/
 #mondrian_pic {
     position: absolute;
     bottom: 0;
-    left: 35%;
+    left: 15%;
+    max-width: 80%;
         z-index: 9999;
 }
 
