--- a/wcott2014_demos/less/wcottawa.less
+++ b/wcott2014_demos/less/wcottawa.less
@@ -252,3 +252,16 @@ ______________________________________________*/
         }
     }
 }
+
+#owl-demo {
+    height: 500px;
+    display: block;
+    .item, .owl-item {
+        //height: 500px;
+    img {
+        
+        max-width: auto;
+    }
+}
+
+}
